styles/mobile changes

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Changa&display=swap" rel="stylesheet">
 </head>
 <body onload="cardShuffle()">
     <header>
-        <nav>
-            <p>2020 Survival Kit Memory Game</p>
-        </nav>
+        <p>2020 Survival Kit Memory Game</p>
     </header>
 
     <div class="button-container" >
@@ -24,67 +22,67 @@
     <div class="cards-container">
         <div class="card" id="netflix">
             <img class="card-front" src="./images/netflix.jpg" alt="netflix-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="mask">
             <img class="card-front" src="./images/mask.jpg" alt="mask-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="cell-phone">
             <img class="card-front" src="./images/cell-phone.jpg" alt="cell-phone-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="toilet-paper">
             <img class="card-front" src="./images/toilet-paper.jpg" alt="toilet-paper-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="wine">
             <img class="card-front" src="./images/wine.jpg" alt="wine-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="hand-wash">
             <img class="card-front" src="./images/hand-wash.jpg" alt="hand-washing-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="dog">
             <img class="card-front" src="./images/dog.jpg" alt="dog-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="zoom">
             <img class="card-front" src="./images/zoom.jpg" alt="computer-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="netflix">
             <img class="card-front" src="./images/netflix.jpg" alt="netflix-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="mask">
             <img class="card-front" src="./images/mask.jpg" alt="mask-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="cell-phone">
             <img class="card-front" src="./images/cell-phone.jpg" alt="cell-phone-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="toilet-paper">
             <img class="card-front" src="./images/toilet-paper.jpg" alt="toilet-paper-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="wine">
             <img class="card-front" src="./images/wine.jpg" alt="wine-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="hand-wash">
             <img class="card-front" src="./images/hand-wash.jpg" alt="hand-washing-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="dog">
             <img class="card-front" src="./images/dog.jpg" alt="dog-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
         <div class="card" id="zoom">
             <img class="card-front" src="./images/zoom.jpg" alt="computer-image"></img>
-            <img class="card-back" src="./images/virus.jpg" alt="virus-image"></img>
+            <div class="card-back"></div>
         </div>
     </div>
     
